# Stanford-cs336-learning

./: Makefile  README.md
stanford-cs336/: .gitignore  pyproject.toml  temp2.json  tinystories-val.json
stanford-cs336/assignment-1/: dev.ipynb  tokenizer.py
stanford-cs336/assignment1-basics/: dev.ipynb  model.py  tokenizer.py  tokenizer_train.py
stanford-cs336/assignment1-basics/tests/: adapters.py
stanford-cs336/assignment_1/: tokenizer.py  tokenizer_train.py
