[project]
name = "stanford-cs336"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
    "ray>=2.46.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
